--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 {/* LOGO PAGUYUBAN */}
                                 <div className="bg-white p-1 rounded-xl shadow-lg shadow-blue-900/50 overflow-hidden h-12 w-12 flex items-center justify-center">
                                     <img 
-                                        src="logo.JPG" 
+                                        src="https://raw.githubusercontent.com/ProduksDigital/Ronda_Malam_Minggu/refs/heads/main/logo.JPG.JPG" 
                                         alt="Logo Paguyuban" 
                                         className="w-full h-full object-cover"
                                         onError={(e) => {
