--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 {/* LOGO PAGUYUBAN */}
                                 <div className="bg-white p-1 rounded-xl shadow-lg shadow-blue-900/50 overflow-hidden h-12 w-12 flex items-center justify-center">
                                     <img 
-                                        src="https://drive.google.com/uc?export=view&id=1zILtO4zU9QZMZTY4QqY1dBWeqZoW2mXt" 
+                                        src="logo.JPG" 
                                         alt="Logo Paguyuban" 
                                         className="w-full h-full object-cover"
                                         onError={(e) => {
